Cleaning up challenges

--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -3,6 +3,11 @@
 \section{Challenges}
 \label{sec:challenges}
 
+% Jeremy: Arkady -- please see reclustering of previous section and use it to motivate why these are the right subset to study.
+% Is this subset of challenges normative or positive?
+% Normative -- the set of challenges that ought to be studied
+% Positive -- the set of challenges that happened to be studied by others
+
 Our analysis has allowed us to identify several challenge areas for the development and application of blockchain technology.  In this section we discuss several of these challenges and briefly summarize related approaches for mitigating them.
 
 %\paragraph{Scalability of public blockchains: transaction costs and bandwidth, emergent centralization, and energy consumption}
