--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -61,7 +61,7 @@ This shows that Blockchain's significant novel utility is more firmly rooted in 
 % I feel like separating challenges and limitations is a bit of a judgement call. 
 
 Our concept map shows interconnections between features and use cases. We also coded challenges -- both problems hindering the use of Blockchain that do not currently have satisfactory solutions, and inherent deficits of the technology. In this section, we will list the concept groupings we created and we discuss the academic response in the next section.
-
+\anote{I really like this list.  But, the challenges in Section~\ref{sec:challenges} only cover a subset of the list (and its not divided in the same way).  Should we aim to cover all the challenges listed here (for many of them, I dont really know what to say)?  We should definitely get the two sections to match up better.}
 \subsubsection{Technical Challenges}
 \begin{itemize}
 	\item{Blockchain can handle finite, countable, and unique resources only}
