minor changes to challenges

--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -22,7 +22,7 @@ To reduce the power consumption of blockchain, there have been several proposals
 Another unintended consequence of proof-of-work style blockchains is the centralization of mining power.  In order to reduce variance in their earnings, miners are incentivized to work together in large mining pools, pooling their compute power and sharing the profits among pool members.  Currently, almost 70\% of Bitcoin blocks are mined by the five largest mining pools \cite{BlockchainInfoPools} significantly limiting the actual decentralization achieved by Bitcoin~\cite{arxiv:GBERS18}. Of course, these pools are disincentivized to damage trust in Bitcoin (and thus reduce its value and their profits) by abusing their power to censor transactions or violate rules in other ways. But this centralization undoubtedly runs counter to the normative property that Blockchain is decentralized and may violate security notions that depend on decentralization. \anote{Add citation on techniques to discourage mining pools.} 
 
 \paragraph{Increasing transaction rates}
-Another challenge to the scalability of blockchain solutions, especially in the permissionless setting is the need to be able to quickly process more and more transactions.  Current systems often have rather long wait times before a transaction can be confirmed on the blockchain (e.g., Bitcoin takes about an hour to make a transaction final\anote{Verify and add citation}).  This makes blockchain-based solutions less than ideal when immediate transactions are needed, such as when physical goods are sold.
+Another challenge to the scalability of blockchain solutions, especially in the permissionless setting is the need to be able to quickly process more and more transactions.  Current systems often have rather long wait times before a transaction can be confirmed on the blockchain (e.g., Bitcoin can take several hours to confirm a transaction\anote{Add citation?}).  This makes blockchain-based solutions less than ideal when immediate transactions are needed, such as when physical goods are sold.
 
 A couple different approaches have been proposed to deal with this issue.  First, a number of hybrid consensus algorithms (e.g.,~\cite{SOSP:GHMVZ17,OPODIS:AMNRS17,DISC:PasShi17,EC:PasShi18,NSDI:EGSR16}) aim to reduce transaction approval times through reducing or eliminating forks.  Most of these work by using proof-of style protocols to elect a committee or a single leader who then uses traditional byzantine fault-tolerant consensus to advance the blockchain.  A second approach for improving transaction rates, especially for financial transactions, is to make use of payment-channel networks.  Such networks setup pairwise channels between parties to allow transactions on these channels to occur ``off-chain'', i.e., without being recorded on the blockchain.  The blockchain is only used for conflict resolution.  Thus, transaction rates in payment channels are not bound by the blockchain transaction rate.  Many different flavors of payment-channel networks achieving various properties have been proposed (e.g.~\cite{PooDry16, NDSS:HABSG17,CCS:KhaGer17,SYSTOR:LNEKPS18,CCS:MMKMR17,CCS:GreMie17}) and several such as the Lightning network~\cite{PooDry16} are in active development for financial transactions on top of Bitcoin.  
 
