related works: reduced wordiness and added four additional sources

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1,3 +1,4 @@
+% Encoding: UTF-8
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
@@ -1104,3 +1105,37 @@ Scalable off-chain instant payments},
   biburl    = {https://dblp.org/rec/bib/conf/ccs/JuelsKS16},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+@Article{Henry18,
+  author  = {Henry, Ryan and Herzberg, Amir and Kate, Aniket},
+  title   = {Blockchain Access Privacy: Challenges and Directions},
+  journal = {IEEE Security and Privacy Magazine},
+  year    = {2018},
+}
+
+@Misc{Wust17,
+  author       = {W{\"u}st, Karl and Gervais, Arthur},
+  title        = {Do you need a Blockchain?},
+  year         = {2017},
+  howpublished = {Cryptology ePrint Archive, Report 2017/375},
+  note         = {\url{https://eprint.iacr.org/2017/375}},
+}
+
+@InProceedings{Gervais16,
+  author       = {Gervais, Arthur and Karame, Ghassan O. and W{\"u}st, Karl and Glykantzis, Vasileios and Ritzdorf, Hubert and Capkun, Srdjan},
+  title        = {On the security and performance of proof of work blockchains},
+  booktitle    = {Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+  year         = {2016},
+  organization = {ACM},
+  pages        = {3--16},
+}
+
+@InProceedings{Croman16,
+  author       = {Croman, Kyle and Decker, Christian and Eyal, Ittay and Gencer, Adem Efe and Juels, Ari and Kosba, Ahmed and Miller, Andrew and Saxena, Prateek and Shi, Elaine and Sirer, Emin G{\"u}n and others},
+  title        = {On scaling decentralized blockchains},
+  booktitle    = {International Conference on Financial Cryptography and Data Security},
+  year         = {2016},
+  organization = {Springer},
+  pages        = {106--125},
+}
+
+@Comment{jabref-meta: databaseType:biblatex;}
